Fixed banner flickering

--- a/style/banner-style.css
+++ b/style/banner-style.css
@@ -20,6 +20,13 @@
 
 
 
+body
+{
+	opacity: 0;
+}
+
+
+
 .scroll-button
 {
 	color: rgb(127, 127, 127);
